📱 fix mobile button overflow

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,6 +7,7 @@ body,
 	flex-direction: column;
 	width: 100%;
 	min-height: 100vh;
+	overflow-x: hidden;
 	color: var(--color-text);
 	background-color: var(--color-background);
 }
